--- a/style.css
+++ b/style.css
@@ -2,3 +2,12 @@ html {
   box-sizingL border-box;
   font-size: 100%;
 }
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  padding:0;
+}
