--- a/style.css
+++ b/style.css
@@ -13,5 +13,6 @@ body {
 }
 
 #map {
-  height: 60vh;
+  height: 900px; /* The height is 400 pixels */
+  width: 100%; /* The width is the width of the web page */
 }
