--- a/data/public/style.css
+++ b/data/public/style.css
@@ -16,3 +16,22 @@ body {
   height: 900px; /* The height is 400 pixels */
   width: 100%; /* The width is the width of the web page */
 }
+
+/* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+/* Github */
+.fa-github {
+  background: #000;
+  color: #fff;
+}
